resources/dsaas-stg/dsaas-preview/jenkins-proxy.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: jenkins-proxy
  name: jenkins-proxy
spec:
  host: jenkins.prod-preview.openshift.io
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jenkins-proxy
    weight: 100
  wildcardPolicy: None
